# Hangmanversao1

./: CMakeLists.txt  Forca.cpp  Forca.hpp  Interface.cpp  README.md  author.md  main.cpp  palavras.txt  scores.txt
source/: CHANGELOG.md  CMakeLists.txt  CMakeListsoriginal.txt  Forca.cpp  Interface.cpp  Interface.hpp  LICENSE  README.md  main.cpp  palavras.txt  scores.txt
source/utils/: text_color.h
